# utd-se4485-group-3

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  cli.py  path_guard.py  remote_server.py  requirements
configs/: deployer.preseed.demo.yaml
deployer/: pyproject.toml
deployer/examples/: cli.md  deployer.yaml  test-config.yaml  test-deployer.yaml
deployer/src/: archive_downloader.py  backup_cleanup.py  cli.py  config_parser.py  expander_verifier.py  logger.py  orchestrator.py  path_guard.py  remote_server.py
docs/: use_case_diagram.drawio
downloader/: pyproject.toml
downloader/examples/: cli.md  downloader.yaml
downloader/src/: cli.py  config_parser.py  extension_repo.py  logger.py  orchestrator.py  packaging.py  path_guard.py
schemas/: manifest.schema.json
server/: main.py  pyproject.toml
