[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "everfox-downloader"
version = "0.1.0"
description = "VSCode Extensions utility"
requires-python = ">=3.12"

[project.scripts]
everfox-downloader = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
